# callithrix

./: LICENSE  README.md  callithrix
skel/: .gitignore  README.md
skel/.mise/: config.toml
skel/.mise/tasks/: server
skel/server/: app.py  pyproject.toml
skel/server/callithrix/: __init__.py  app.py  authapp.py  crud.py  db.py  form.py  jinja.py  language.py  types.py
skel/server/callithrix/admin/: app.py
skel/server/callithrix/admin/templates/admin/: index.html
skel/server/callithrix/admin/templates/admin/_table/: _id.html  index.html  new.html
skel/server/callithrix/auth/: app.py  model.py
skel/server/callithrix/auth/templates/auth/: account.html  forgot.html  login.html  recover.html  signup.html  validate.html
skel/server/callithrix/optimage/: app.py
skel/server/callithrix/repository/: repo.py
skel/server/callithrix/repository/storage/: migrations.py  sql.py
skel/server/callithrix/repository/storage/sql_backends/: mysql_asyncmy.py  postgresql_asyncpg.py  query_builder.py  sqlite_aiosqlite.py
skel/server/callithrix/templates/: index.html
skel/server/callithrix/templates/components/: menu.html
skel/server/callithrix/utils/: email.py
skel/server/config/: configsample.json
skel/server/domain/: model.py
skel/server/templates/: index.html
skel/server/templates/base/: layout.html
skel/server/templates/components/: menu.html
